# Lunar-Studio

./: .gitignore  CMakeLists.txt  README.md  groq_stream
brain/fine_tune/: bio_deepseek.jsonl  chem_deepseek.jsonl  fine_tune.ipynb  fine_tune.jsonl  math.jsonl  physics_grok.jsonl  structural.jsonl
brain/fine_tune/1000/: chat_gpt_1000.jsonl  deepseek_100.jsonl  fine_tune.jsonl  fine_tune_st.jsonl  fine_tune_unique.jsonl  gemini_1000.jsonl
engine/: CMakeLists.txt
engine/ic/cs/: mapping.db
engine/include/: api.h  external_api.hpp  model.hpp  search.hpp
engine/include/utils/: remove_think_blocks.hpp
engine/src/: api.cpp  embed.cpp  external_api.cpp  main.cpp  make_index.cpp  model.copy.cpp  model.cpp  run_llm.cpp  search.cpp  simple_inference.cpp
engine/src/apps/: quiz.cpp
engine/src/utils/: remove_think_blocks.cpp
engine/test/: so.test.py
ic/cs/: cpp_index_ivf.index  mapping.db
include/: api.h  embed.hpp  logger.hpp  model.hpp  run_llm.hpp
include/utils/: extract_search_query.hpp
src/: Engine.cpp  Engine.h  api.cpp  embed.cpp  gui_main.cpp  main.cpp  model.cpp  run_llm.cpp  search.cpp
src/apps/: quiz.cpp
src/qml/: Main.qml
src/qml/components/: Avatar.qml  Header.qml  IconButton.qml  InputField.qml  LoadModelButton.qml  MessageBubble.qml  MessageInput.qml  ModelPopup.qml  ModelSelectorButton.qml  SearchedLabel.qml  SearchingIndicator.qml  SendButton.qml  ThinkingSection.qml
src/qml/pages/: ChatPage.qml  LoadingPage.qml
src/qml/utils/: MessageUtils.qml
src/utils/: extract_search_query.cpp  remove_think_blocks.cpp
src/utlils/: extract_search_query.cpp
ui/: pubspec.yaml
ui/lib/: main.dart
ui/lib/src/: app.dart
ui/lib/src/core/db/: app_db.dart
ui/lib/src/core/theme/: ThemeControllder.dart  colors.dart
ui/lib/src/features/chat/presentation/: chat_screen.dart
ui/lib/src/features/chat/presentation/panels/: left_panel.dart  main_panel.dart  top_panel.dart
ui/lib/src/features/chat/presentation/widgets/: context_popup.dart  model_select_dropdown.dart
ui/lib/src/features/settings/presentation/panels/: context_settings.dart  external_api_settings.dart
ui/lib/src/features/settings/presentation/popup/: settings_popup.dart
ui/lib/src/features/welcome/presentation/: welcome_screen.dart
ui/lib/src/features/welcome/presentation/popup/: beta_warning_popup.dart
ui/lib/src/ffi/: llm_engine.dart  llm_ffi.dart  llm_worker.dart
